[package]
name = "pwa-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
neutralts = "1.3.0"
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-extra = { version = "0.6", features = ["cookie"] }
tower-http = { version = "0.4", features = ["fs"] }
mime_guess = "2.0"
